k8s/templates/prod/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-tls
  namespace: ${CONSUL_APP_NAMESPACE}
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - ${CONSUL_APP_DOMAIN}
    secretName: echoserver-tls
  rules:
  - host: ${CONSUL_APP_DOMAIN}
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
